--- a/startpage.html
+++ b/startpage.html
@@ -37,7 +37,7 @@
                     <div id="messageboxPassword" class="messagebox"></div>
                 </div>
                 <div class="remember">
-                    <input class="checkbox" type="checkbox" required>
+                    <input class="checkbox" type="checkbox">
                     <span>Remember me</span>
                 </div>
                 <div class="loginButtons">
