--- a/login.html
+++ b/login.html
@@ -29,14 +29,14 @@
             </div>
             <form onsubmit="login(); return false;">
                 <div class="inputFields">
-                    <input class="input inputMail" type="email" placeholder="Email" id="email" autocomplete="off">
+                    <input class="input inputMail" type="email" placeholder="Email" id="email" autocomplete="off" oninput="resetOutlineLogin('email')">
                     <div id="messagebox" class="messagebox"></div>
                     <input class="input inputPassword" type="password" placeholder="Password" id="password"
-                        autocomplete="off">
+                        autocomplete="off" oninput="resetOutlineLogin('password')">
                     <div id="messageboxPassword" class="messagebox"></div>
                 </div>
                 <div class="remember">
-                    <input class="checkbox" type="checkbox" required>
+                    <input class="checkbox" type="checkbox">
                     <span>Remember me</span>
                 </div>
                 <div class="loginButtons">
