--- a/addtask.html
+++ b/addtask.html
@@ -161,6 +161,7 @@
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
     <script src="./javascript/addtask.js"></script>
+    <script src="./javascript/signup.js"></script>
 
 </body>
 
