Signup.js updated messageboxes

--- a/signup.html
+++ b/signup.html
@@ -34,11 +34,11 @@
                     <div class="messagebox" id="messageboxPassword"></div>
                     <input class="input inputPassword" type="password" placeholder="Confirm Password"
                         id="confirmpassword" autocomplete="off" oninput="resetOutline('confirmpassword')">
-                    <div class="messagebox" id="messageboxPasswordConfirmed"></div>
+                    <div class="messagebox" id="messageboxConfirmpassword"></div>
                 </div>
                 <div>
                     <div class="accept">
-                        <input type="checkbox" class="checkbox" id="checkbox">
+                        <input onclick="checkPolicy()" type="checkbox" class="checkbox" id="checkbox">
                         <span>I accept the</span><span class="policyTypo">Privacy policy</span>
                     </div>
                     <div class="messageboxDiv">
