--- a/startpage.html
+++ b/startpage.html
@@ -31,17 +31,18 @@
             </div>
             <form onsubmit="login(); return false;">
                 <div class="inputFields">
-                    <input class="input inputMail" type="email" placeholder="Email" id="email" autocomplete="off" >
-                    <div id="messagebox" class="messagebox"></div>
-                    <input class="input inputPassword" type="password" placeholder="Password" id="password" autocomplete="off">
+                    <input class="input inputMail" type="email" placeholder="Email" id="email" autocomplete="off" oninput="resetOutline('email')">
+                    <div id="messageboxEmail" class="messagebox"></div>
+                    <input class="input inputPassword" type="password" placeholder="Password" id="password"
+                        autocomplete="off" oninput="resetOutline('password')">
                     <div id="messageboxPassword" class="messagebox"></div>
                 </div>
                 <div class="remember">
-                    <input class="checkbox" type="checkbox">
+                    <input class="checkbox" type="checkbox" id="checkbox" onclick="rememberMe()">
                     <span>Remember me</span>
                 </div>
                 <div class="loginButtons">
-                    <button class="buttonLogin" onclick="openSummary()">Log In</button>
+                    <button class="buttonLogin">Log In</button>
                     <button class="buttonGuest">Guest Log In</button>
                 </div>
             </form>
@@ -59,7 +60,7 @@
 
 
     <script src="./javascript/login.js"></script>
-    <script src="./javascript/signup.js"></script>
+
 
 </body>
 </html>
