--- a/addtask.html
+++ b/addtask.html
@@ -30,24 +30,27 @@
                     <div class="title inputBox">
                         <div class="titleStar"><span class="typo">Title</span><span class="typo typoRed">*</span>
                         </div>
-                        <input class="inputTitle inputField" type="text" placeholder="Enter a title" id="title" oninput="resetOutlineAddtask('title')">
+                        <input class="inputTitle inputField" type="text" placeholder="Enter a title" id="title"
+                            oninput="resetOutlineAddtask('title')">
                         <div class="messagebox" id="messageboxTitle"></div>
                     </div>
 
                     <div class="description inputBox">
                         <span class="typo">Description</span>
-                        <input class="inputDescription inputField" type="text" id="description" placeholder="Enter a Description" autocomplete="off">
+                        <input class="inputDescription inputField" type="text" id="description"
+                            placeholder="Enter a Description" autocomplete="off">
                     </div>
 
                     <div class="assigned inputBox dropdown">
                         <span class="typo">Assigned to</span>
                         <div onclick="openContactsDropDown()" class="inputAssigned inputField"><span>Select task
-                                category</span><img onclick="closeContactsDropDown()" id="categoryDropDownArrow"
+                                category</span><img onclick="closeContactsDropDown()" id="assignedDropDownArrow"
                                 class="dropDownMenuArrow" src="./img/addtask/arrow_drop_downaa.svg"></div>
                         <div id="contactsDropDownMenuContainer" class="dropDownAssignedOpened inputField noDisplay">
                             <input type="text" class="dropDownOption searchContactField"><img
-                                onclick="closeContactsDropDown()" id="categoryDropDownArrow" class="dropDownMenuArrow"
+                                onclick="closeContactsDropDown()" id="assignedDropDownArrowOpened" class="dropDownMenuArrow  rotated"
                                 src="./img/addtask/arrow_drop_downaa.svg">
+
                             <div id="contactsList" class="contactsDropDownMenu">
                             </div>
                         </div>
@@ -62,7 +65,8 @@
                             <div class="titleStar">
                                 <span class="typo">Due date</span><span class="typo typoRed">*</span>
                             </div>
-                            <input class="inputField inputDate" type="date" id="duedate" oninput="resetOutlineAddtask('duedate')">
+                            <input class="inputField inputDate" type="date" id="duedate"
+                                oninput="resetOutlineAddtask('duedate')">
                             <div class="messagebox" id="messageboxDuedate"></div>
                         </div>
 
@@ -83,8 +87,9 @@
                             </div>
                             <div class="inputAssigned inputField" onclick="toggleDropDownMenu()"><span>Select task
                                     category</span><img id="categoryDropDownArrow" class="dropDownMenuArrow"
-                                    src="./img/addtask/arrow_drop_downaa.svg" ></div>
-                            <div id="dropDownCategory" class="dropDownCategoryOpened inputField noDisplay" oninput="resetOutlineAddtask('dropDownCategory')">
+                                    src="./img/addtask/arrow_drop_downaa.svg"></div>
+                            <div id="dropDownCategory" class="dropDownCategoryOpened inputField noDisplay"
+                                oninput="resetOutlineAddtask('dropDownCategory')">
                                 <div class="dropDownOption">Select task category</div>
                                 <div class="dropDownOption">Technical Task</div>
                                 <div class="dropDownOption">User Story</div>
@@ -165,17 +170,17 @@
             </div>
         </div> -->
 
-        <div class="lowerSection">
-            <div>
-                <span class="typoSmall typoRed">*</span><span class="typoSmall">This field is required</span>
+            <div class="lowerSection">
+                <div>
+                    <span class="typoSmall typoRed">*</span><span class="typoSmall">This field is required</span>
+                </div>
+                <div class="buttonsRight">
+                    <button class="buttonClear">Clear<img class="iconCross" src="./img/addtask/iconoir_cancel.svg"
+                            alt="" onclick="clearFields()"></button>
+                    <button class="buttonCreate">Create Task <img class="icon" src="./img/addtask/check.svg" alt=""
+                            onclick="addtask()"></button>
+                </div>
             </div>
-            <div class="buttonsRight">
-                <button class="buttonClear">Clear<img class="iconCross" src="./img/addtask/iconoir_cancel.svg" alt=""
-                        onclick="clearFields()"></button>
-                <button class="buttonCreate">Create Task <img class="icon" src="./img/addtask/check.svg"
-                        alt="" onclick="addtask()"></button>
-            </div>
-        </div>
         </div>
 
     </main>
