--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
 </head>
 
-<body>
+<body onload="renderUsers()">
     <div class="header">
         <img class="logoLogin" src="./img/login/Capa 2.svg" alt="">
     </div>
@@ -64,8 +64,9 @@
         </div>
     </div>
 
-
+    <script src="./javascript/storage.js"></script>
     <script src="./javascript/signup.js"></script>
+
 
 </body>
 
