--- a/board.html
+++ b/board.html
@@ -109,6 +109,7 @@
     <script src="./javascript/header.js"></script>
     <script src="./javascript/navbar.js"></script>
     <script src="./javascript/board.js"></script>
+    <script src="./javascript/storage.js"></script>
 </body>
 
 </html>
