--- a/startpage.html
+++ b/startpage.html
@@ -10,13 +10,12 @@
     <link rel="icon" type="image/x-icon" href="./img/favicon.png">
 </head>
 
-<body>
+<body onload="renderUsers();loadLocalStorage()">
     <div>
         <div class="startscreen"></div>
         <img class="logoStartscreen" src="./img/login/Capa 2.svg" alt="">
         <div class="logoStartscreenWhite" src="" alt=""></div>
     </div>
-
     <div class="header">
         <div></div>
         <div class="registerSection"><span class="typoRegister">Not a Join user?</span>
@@ -29,7 +28,7 @@
                 <div class="headlineLogin">Login</div>
                 <div class="borderLogin"></div>
             </div>
-            <form onsubmit="login(); return false;">
+            <form id="loginForm" onsubmit="login(); return false;">
                 <div class="inputFields">
                     <input class="input inputMail" type="email" placeholder="Email" id="email" autocomplete="off" oninput="resetOutline('email')">
                     <div id="messageboxEmail" class="messagebox"></div>
@@ -38,12 +37,12 @@
                     <div id="messageboxPassword" class="messagebox"></div>
                 </div>
                 <div class="remember">
-                    <input class="checkbox" type="checkbox" id="checkbox" onclick="rememberMe()">
+                    <input class="checkbox" type="checkbox" id="checkbox">
                     <span>Remember me</span>
                 </div>
                 <div class="loginButtons">
-                    <button class="buttonLogin">Log In</button>
-                    <button class="buttonGuest">Guest Log In</button>
+                    <button type="submit" class="buttonLogin">Log In</button>
+                    <button type="button" class="buttonGuest" id="loginButton" onclick="guestLogin()">Guest Log In</button>
                 </div>
             </form>
         </div>
@@ -58,9 +57,8 @@
         <span class="legalNotice" onclick="openLegalNoticePage()">Legal notice</span>
     </div>
 
-
-    <script src="./javascript/login.js"></script>
+    <script src="./javascript/storage.js"></script>
     <script src="./javascript/signup.js"></script>
-
+    <script src="./javascript/login.js"></script>
 </body>
 </html>
