--- a/addtask.html
+++ b/addtask.html
@@ -21,7 +21,7 @@
     </nav>
     <div id="smallNav" class="smallNav">
     </div>
-    <main>
+    <main  id="addTaskMain">
         <h1>Add Task</h1>
         <div class="mainContainer">
             <div class="mainSection">
