add the add-task function

--- a/addtask.html
+++ b/addtask.html
@@ -23,7 +23,7 @@
     </div>
     <main>
         <h1>Add Task</h1>
-        <div class="mainContainer">
+        <div class="mainContainer" id="addTaskMain">
             <div class="mainSection">
                 <form action="" class="sectionLeft">
 
